--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="css/style.css" rel="stylesheet">
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/bootstrap.bundle.js"></script>
-  <!--<script src="script.js"></script>-->
+  <!--<script src="js/script.js"></script>-->
   <title>Glen Osmond Primary School</title>
 </head>
 
